--- a/app/src/main/res/layout/activity_daftar.xml
+++ b/app/src/main/res/layout/activity_daftar.xml
@@ -21,37 +21,36 @@
         android:orientation="vertical"
         android:padding="20dp">
 
-        <TextView
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:src="@drawable/inkant" />
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/txtEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="@string/title_form_registrasi" />
+            android:inputType="textEmailAddress"
+            android:drawableLeft="@drawable/pesan"
+            android:hint="@string/useremail_text" />
 
-            <EditText
-                android:id="@+id/txtEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
-                android:drawableLeft="@drawable/pesan"
-                android:hint="@string/useremail_text" />
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/txtUsername"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/orang"
+            android:hint="@string/username_text" />
 
-            <EditText
-                android:id="@+id/txtUsername"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/orang"
-                android:hint="@string/username_text" />
-
-            <EditText
-                android:id="@+id/txtPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:drawableLeft="@drawable/gembok"
-                android:hint="@string/password_text" />
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/txtPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:drawableLeft="@drawable/gembok"
+            android:hint="@string/password_text" />
 
         <Button
-            android:id="@+id/btnDaftarLogin"
+            android:id="@+id/btnDaftar"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
@@ -62,15 +61,15 @@
             android:textSize="18sp" />
 
         <Button
-            android:id="@+id/btnToLogin"
+            android:id="@+id/btnLogin"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:background="#2776d1"
+            android:background="#002776d1"
             android:layout_gravity="center"
             android:paddingTop="5dp"
             android:textAllCaps="false"
-            android:textColor="#fff"
+            android:textColor="#757a82"
             android:textSize="14sp"
             android:text="@string/punya_akun_text" />
 
