--- a/app/src/main/res/layout/fragment_fish_market_general.xml
+++ b/app/src/main/res/layout/fragment_fish_market_general.xml
@@ -1,179 +1,202 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:paddingLeft="10dp"
-            android:orientation="horizontal"
-            android:background="#FFFFFF"
-            android:layout_marginBottom="10dp">
-
-            <ImageView
-                android:layout_width="43dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/align"/>
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/list"
-                android:paddingLeft="150dp"/>
-        </LinearLayout>
-
-
-        <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:paddingLeft="10dp"
+        android:orientation="horizontal"
+        android:background="#FFFFFF"
+        android:layout_marginBottom="10dp">
+        <ImageView
+            android:layout_width="43dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_format_align_left"/>
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/scroll1">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:weightSum="2"
-                    android:layout_marginLeft="20dp">
-                    <LinearLayout
-                        android:layout_width="150dp"
-                        android:layout_height="100dp">
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:src="@drawable/bgprofil"/>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="150dp"
-                        android:layout_height="100dp"
-                        android:layout_marginLeft="10dp">
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="Ikan Mas \n Rp. 15.000 per kg \n "
-                            android:textSize="18dp"
-                            android:textColor="@color/colorPrimaryDark" />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:weightSum="2"
-                    android:layout_marginLeft="20dp">
-                    <LinearLayout
-                        android:layout_width="150dp"
-                        android:layout_height="100dp">
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:src="@drawable/bgprofil"/>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="150dp"
-                        android:layout_height="100dp"
-                        android:layout_marginLeft="10dp">
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="Ikan Mas \n Rp. 15.000 per kg \n "
-                            android:textSize="18dp"
-                            android:textColor="@color/colorPrimaryDark" />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:weightSum="2"
-                    android:layout_marginLeft="20dp">
-                    <LinearLayout
-                        android:layout_width="150dp"
-                        android:layout_height="100dp">
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:src="@drawable/bgprofil"/>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="150dp"
-                        android:layout_height="100dp"
-                        android:layout_marginLeft="10dp">
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="Ikan Mas \n Rp. 15.000 per kg \n "
-                            android:textSize="18dp"
-                            android:textColor="@color/colorPrimaryDark" />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:weightSum="2"
-                    android:layout_marginLeft="20dp">
-                    <LinearLayout
-                        android:layout_width="150dp"
-                        android:layout_height="100dp">
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:src="@drawable/bgprofil"/>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="150dp"
-                        android:layout_height="100dp"
-                        android:layout_marginLeft="10dp">
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="Ikan Mas \n Rp. 15.000 per kg \n "
-                            android:textSize="18dp"
-                            android:textColor="@color/colorPrimaryDark" />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:weightSum="2"
-                    android:layout_marginLeft="20dp">
-                    <LinearLayout
-                        android:layout_width="150dp"
-                        android:layout_height="100dp">
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:src="@drawable/bgprofil"/>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="150dp"
-                        android:layout_height="100dp"
-                        android:layout_marginLeft="10dp">
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="Ikan Mas \n Rp. 15.000 per kg \n "
-                            android:textSize="18dp"
-                            android:textColor="@color/colorPrimaryDark" />
-                    </LinearLayout>
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </ScrollView>
-
+            android:text="filter"
+            android:paddingTop="18dp"
+            android:textSize="20dp"
+            android:layout_gravity="center"
+            android:paddingLeft="5dp"
+            android:textColor="@color/colorPrimary"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_list"
+            android:paddingLeft="100dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="semua"
+            android:layout_gravity="center"
+            android:paddingLeft="5dp"
+            android:paddingTop="18dp"
+            android:textSize="20dp"
+            android:textColor="@color/colorPrimary"/>
     </LinearLayout>
 
-</RelativeLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="10dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:orientation="horizontal"
+                android:background="@color/perak">
+                <ImageView
+                    android:layout_width="158dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/library" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Ikan Mas \n Rp. 15.000 per kilo"
+                    android:textSize="20dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:background="@color/perak">
+
+                <ImageView
+                    android:layout_width="158dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/library" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:text="Ikan Mas \n Rp. 15.000 per kilo"
+                    android:textSize="20dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:background="@color/perak">
+
+                <ImageView
+                    android:layout_width="158dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/library" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:text="Ikan Mas \n Rp. 15.000 per kilo"
+                    android:textSize="20dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:background="@color/perak">
+
+                <ImageView
+                    android:layout_width="158dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/library" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:text="Ikan Mas \n Rp. 15.000 per kilo"
+                    android:textSize="20dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:background="@color/perak">
+
+                <ImageView
+                    android:layout_width="158dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/library" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:text="Ikan Mas \n Rp. 15.000 per kilo"
+                    android:textSize="20dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:background="@color/perak">
+
+                <ImageView
+                    android:layout_width="158dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/library" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:text="Ikan Mas \n Rp. 15.000 per kilo"
+                    android:textSize="20dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:background="@color/perak">
+
+                <ImageView
+                    android:layout_width="158dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/library" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:text="Ikan Mas \n Rp. 15.000 per kilo"
+                    android:textSize="20dp" />
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
+
+
+
+</LinearLayout>
