--- a/app/src/main/res/layout/fragment_pengaturan.xml
+++ b/app/src/main/res/layout/fragment_pengaturan.xml
@@ -2,82 +2,74 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <FrameLayout
-        android:id="@+id/fr_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/bgprofil"
-            android:adjustViewBounds="true"/>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="8dp"
-            android:background="#AA000000"
-            android:layout_gravity="bottom|left"
-            android:layout_marginBottom="20dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="$74"
-                android:textSize="28sp"
-                android:textStyle="bold"
-                android:textColor="@android:color/white"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Per night"
-                android:textSize="14sp"
-                android:textStyle="normal"
-                android:layout_marginTop="3dp"
-                android:textColor="@android:color/white"/>
-        </LinearLayout>
-    </FrameLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="10dp"
-        android:layout_below="@id/fr_image">
-        <TextView
+        android:padding="10dp">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Hilton Hotel Isla Nublar Resort"
-            android:textSize="24sp"
-            android:gravity="center"
-            android:textStyle="bold"/>
-        <TextView
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_notifications" />
+
+            <TextView
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:paddingTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:text="Notification"
+                android:textSize="16dp"
+                android:id="@+id/switchStatus"/>
+
+            <Switch
+                android:id="@+id/mySwitch"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"/>
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Jurassic World Avenue, West island, 87 miles of Costa Rica"
-            android:textSize="15sp"
-            android:gravity="center"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
-            android:textStyle="normal"/>
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/avatar"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp" />
-        <TextView
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp">
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_person" />
+
+            <TextView
+                android:layout_width="250dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:paddingTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:text="Akun"
+                android:textSize="16dp" />
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Sidiq Permana (owner)"
-            android:gravity="center"
-            android:layout_gravity="center"/>
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:id="@+id/tentang">
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_info" />
+
+            <TextView
+                android:layout_width="250dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:paddingTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:text="Tentang"
+                android:textSize="16dp" />
+        </LinearLayout>
     </LinearLayout>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Request to book"
-        android:background="@android:color/holo_red_light"
-        android:textColor="@android:color/white"
-        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
