--- a/app/src/main/res/layout/fragment_fish_market__hot__promo.xml
+++ b/app/src/main/res/layout/fragment_fish_market__hot__promo.xml
@@ -1,51 +1,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <SearchView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:paddingLeft="10dp"
-            android:orientation="horizontal"
-            android:background="#FFFFFF"
-            android:layout_marginBottom="10dp">
-
-            <ImageView
-                android:layout_width="43dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_format_align_left"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Filter"
-                android:textSize="20dp"
-                android:textColor="@color/colorPrimary"
-                android:paddingTop="18dp"
-                android:paddingLeft="5dp"/>
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_list"
-                android:paddingLeft="100dp" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="semua"
-                android:textSize="20dp"
-                android:textColor="@color/colorPrimary"
-                android:paddingTop="18dp"
-                android:paddingLeft="5dp"/>
-        </LinearLayout>
-
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:id="@+id/searchview"></SearchView>
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_add"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"/>
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_below="@+id/searchview">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -94,7 +69,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:text="Cumi-cumi \n Rp28.000,- per kilo"/>
+                            android:text="Cumi-cumi \n Rp40.000,- per kilo"/>
 
                         <ImageView
                             android:layout_width="match_parent"
@@ -164,11 +139,11 @@
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="150dp"
-                            android:src="@drawable/library"/>
+                            android:src="@drawable/kakap"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:text="Ikan Mas \n Rp. 10.000 per kilo"/>
+                            android:text="Ikan Kakap \n Rp. 48.500 per kilo"/>
 
                         <ImageView
                             android:layout_width="match_parent"
@@ -184,58 +159,11 @@
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="150dp"
-                            android:src="@drawable/library"/>
+                            android:src="@drawable/kepiting"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:text="Ikan Mas \n Rp. 10.000 per kilo"/>
-
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:src="@drawable/ic_location"/>
-                    </LinearLayout>
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    android:orientation="horizontal">
-                    <LinearLayout
-                        android:layout_width="150dp"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:layout_margin="10dp"
-                        android:background="@color/perak">
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="150dp"
-                            android:src="@drawable/library"/>
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="Ikan Mas \n Rp. 10.000 per kilo"/>
-
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:src="@drawable/ic_location"/>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="150dp"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:layout_margin="10dp"
-                        android:background="@color/perak">
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="150dp"
-                            android:src="@drawable/library"/>
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="Ikan Mas \n Rp. 10.000 per kilo"/>
+                            android:text="Kepiting \n Rp. 80.000 per kilo"/>
 
                         <ImageView
                             android:layout_width="match_parent"
@@ -258,11 +186,11 @@
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="150dp"
-                            android:src="@drawable/library"/>
+                            android:src="@drawable/lele"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:text="Ikan Mas \n Rp. 10.000 per kilo"/>
+                            android:text="Ikan Lele \n Rp. 25.000 per kilo"/>
 
                         <ImageView
                             android:layout_width="match_parent"
@@ -278,11 +206,58 @@
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="150dp"
-                            android:src="@drawable/library"/>
+                            android:src="@drawable/makarel"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:text="Ikan Mas \n Rp. 10.000 per kilo"/>
+                            android:text="Ikan Makarel \n Rp. 22.000 per kilo"/>
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/ic_location"/>
+                    </LinearLayout>
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:orientation="horizontal">
+                    <LinearLayout
+                        android:layout_width="150dp"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:layout_margin="10dp"
+                        android:background="@color/perak">
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="150dp"
+                            android:src="@drawable/bandeng"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="Ikan Bandeng \n Rp. 26.000 per kilo"/>
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/ic_location"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="150dp"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:layout_margin="10dp"
+                        android:background="@color/perak">
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="150dp"
+                            android:src="@drawable/bawal"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="Ikan Bawal \n Rp. 25.000 per kilo"/>
 
                         <ImageView
                             android:layout_width="match_parent"
@@ -294,11 +269,4 @@
 
             </LinearLayout>
         </ScrollView>
-    </LinearLayout>
-    <ImageView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="500dp"
-        android:layout_marginLeft="290dp"
-        android:src="@drawable/ic_add" />
 </RelativeLayout>
